--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -47,7 +47,7 @@ A l’issue du prétraitement, les principaux algorithmes de segmentation utilis
 %%
 Afin d'évaluer la pertinence des principales segmentations, nous avons appliqué sur trois images TOF de couvertures anatomiques différentes, différents algorithmes  (Figure~\ref{fig:2_comparaisons_segmentations}). Nous avons ainsi testé le seuillage simple, la croissance de région et le seuillage sur la base d'un filtre de Frangi (prétraitement Hessien). Pour chaque volume TOF, une segmentation manuelle validée par un neuroradiologue a été réalisée pour de servir de référence. Son squelette a ensuite été extrait par amincissement itératif (voir ~\ref{ss:skel}). Notons d'ailleurs que parmi les trois volumes, le premier possède une couverture anatomique proche des données BraVa. Les longueurs des différentes artères sont d'ailleurs en accord avec cette base (voir Table~\ref{tab:databrava}). Chaque méthode requiert l'ajustement de paramètres permettant l'obtention d'une segmentation de bonne qualité. En vue de les optimiser, nous avons établit un score prenant en compte 1) le pourcentage du squelette de référence inclus dans la segmentation, et 2) le rapport moyen entre le volume de la segmentation donnée et de la référence pour les 100 premiers niveaux de coupes (où les vaisseaux sont le plus facilement segmentable). Les paramètres de segmentation sont définis comme optimaux lorsque le score est proche de 2 (somme des deux critères). Un exemple d'identification de ces paramètres est donné en Figure~\ref{fig:2_optimisation_criteres} sur un seuillage après filtre de Frangi.  Comme on le voit, un seuil plus faible que l'optimal permet de récupérer une plus grande partie de l'arbre artériel (67\%) mais avec une surestimation de son volume de l'ordre de 79\%. Une valeur supérieure induit au contraire une perte d'une partie de l'arborescence (43 \%) mais affine le volume (+20\% seulement d'écart avec la référence). Le paramètre optimal assure un compromis entre couverture de l'arbre vasculaire (54\%) et volume (+41\%). On notera ainsi que méthode de Frangi à tendance à surestimer le volume artériel.\\
 
- Les segmentations obtenues par les différentes méthodes après utilisation de ce critère qualité sont illustrées dans la Figure~\ref{fig:2_comparaisons_segmentations}. Le simple seuillage semble offrir la meilleur correspondance en terme de recouvrement de l'aborescence totale pour les trois volumes avec une moyenne de 70\%, en revanche des écarts important en termes de volume peuvent être identifiés. Ceux-ci sont principalement dûs à la segmentation d'autres structures ou de bruit identifié comme du vaisseau à cause des inhomogénéités de signal. Ce phénomène se voit clairement sur les deux derniers volumes. La croissance de région quant à elle offre des résultats mitigés avec seulement 39\% de recouvrement et une sous estimation systématique du volume (40\%). Cette sous estimation s'explique par le fait que l'algorithme requiert des points initiaux pour développer la segmentation. Selon leur localisation, la méthode segmentera plutot la périphérie du vaisseau ou son centre induisant donc une sous estimation du volume. Le seuillage d'un filtre de Frangi (prétraitement Hessien), permet de récupérer 48\%  de l'arbre vasculaire en moyenne avec une certaine constance. Contrairement au seuillage simple, il ne récupère que les vaisseaux et non le bruit. Le volume est cependant systématiquement sur-estimé. Notons que nous avons par ailleurs réalisé des essais avec un algorithme de contour actif (non illustrés ici), ceux ci mettent en évidence un temps de traitement bien plus long (en heure contre quelques minutes pour les autres) pour un résultat proche de la croissance de région: sous estimation du volume de l'ordre de 24\% et 41\% de couverture de l'arbre vasculaire pour le premier volume.\\
+ Les segmentations obtenues par les différentes méthodes après utilisation de ce critère qualité sont illustrées dans la Figure~\ref{fig:2_comparaisons_segmentations}. Le simple seuillage semble offrir la meilleur correspondance en terme de recouvrement de l'aborescence totale pour les trois volumes avec une moyenne de 70\%, en revanche des écarts important en termes de volume peuvent être identifiés. Ceux-ci sont principalement dûs à la segmentation d'autres structures ou de bruit identifié comme du vaisseau à cause des inhomogénéités de signal. Ce phénomène se voit clairement sur les deux derniers volumes. La croissance de région quant à elle offre des résultats mitigés avec seulement 39\% de recouvrement et une sous estimation systématique du volume (40\%). Cette sous estimation s'explique par le fait que l'algorithme requiert des points initiaux pour développer la segmentation. Selon leur localisation, la méthode segmentera plutot la périphérie du vaisseau ou son centre induisant donc une sous estimation du volume. Le seuillage d'un filtre de Frangi (prétraitement Hessien), permet de récupérer 48\%  de l'arbre vasculaire en moyenne avec une certaine constance. Contrairement au seuillage simple, il ne récupère que les vaisseaux et non le bruit. Le volume est cependant systématiquement sur-estimé. Le détails de cette analyse met en évidence que l'utilisation d'un seul seuil pour tout le volume dilate artificiellement les grosses artères (carotides et basilaire). Nos essais ont montré une surestimation du volume pour ces artères de l'ordre de 30 \% alors que l'écart pour les vaisseaux de plus faibles diamètres est quasi nul. De même le seuil optimal pour les carotides et l'artère basilaire dispose d'un facteur 10 en rapport du seuil global utilisé. Ainsi si l'on recherche un résultat très précis l'utilisation de plusieurs niveau de seuillage semble requis. Notons que nous avons par ailleurs réalisé des essais avec un algorithme de contour actif (non illustrés ici), ceux ci mettent en évidence un temps de traitement bien plus long (en heure contre quelques minutes pour les autres) pour un résultat proche de la croissance de région: sous estimation du volume de l'ordre de 24\% et 41\% de couverture de l'arbre vasculaire pour le premier volume.\\
 
 Au vue des résultats nous avons choisi la combinaison d’un prétraitement Hessien suivit d’un seuillage simple qui, malgré un recouvrement plus faible de l'arbre vasculaire en comparaison du seuillage simple, assure une identification des vaisseaux uniquement. Le filtre Hessien est en effet robuste dans sa capacité à fournir une image très contrastée des vaisseaux, à partir de laquelle un simple seuillage ajusté manuellement (intervention de l’utilisateur) fournit un résultat qui rend superflu l’utilisation de méthodes de segmentation plus sophistiquées. \\
 Le filtre utilisant cette méthode est dit filtre de Frangi  (\cite{Frangi1998},~\cite{Manniesing2006}). Ce filtre vise à extraire une quantité mesurant la vraisemblance pour une région d’appartenir à un vaisseau : on parle de  « vesselness » locale de l’image. L’idée est d’identifier dans l’image les structures en forme de tubes (voir Figure~\ref{fig:2_1_segmentation_arteres}).\\
