--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -231,7 +231,7 @@ Les rayons moyens des différents compartiments peuvent être visualisés (Figur
 \label{tab:tab_profil_rayons}
 \begin{tabular}[!t]{l|l l}
 \centering
-      & Zagzoule & Notre modèle  \\
+      & Zagzoule et al. \& Linninger et al. & Notre modèle  \\
 \hline
    Artères : aire (cm²) & 3.41 (5.6 \%)&  6.24  (0.8 \%) \\
    Artères : longueur (cm) & 83 &  29 \\
