--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -68,7 +68,7 @@ Les données quantitatives relatives à la {\em longueur} et au {\em diamètre} 
 Le tableau~\ref{tab:databrava} récapitule les données issues de ce travail de morphologie quantitative pertinentes pour nous. Les longueurs des {\em artères cérébrales antérieures}, {\em artères cérébrales moyennes} et {\em artères cérébrales postérieures} sont disponibles (branches {\em droites} et {\em gauches}) pour chacun des 61 sujets. L'ampleur de la variabilité individuelle en termes de longueurs de ces artères renforce clairement la volonté de construire une modélisation sujet-spécifique. Ces données permettent tout de même de disposer d'{\em ordres de grandeur} permettant de vérifier la pertinence de nos segmentations. Nous observons ainsi après comparaison avec une segmentation manuelle réalisée sur nos données de couverture anatomique similaire à BraVa, des résultats concordants.
 %%%
 \begin{table}
-\caption{Longueur des {\em artères cérébrales antérieures}, {\em artères cérébrales moyennes} et {\em artères cérébrales postérieures} telles que mesurées dans le projet BraVa pour 61 sujets (données extraites de la base BraVa en ligne \textcolor{red}{\tt cng.gmu.edu/brava/}).}. Des mesures extraites d'une segmentation manuelle (\textcolor{red}{renvoi vers figure des comparaisons de segmentation} sur un TOF de couverture anatomique similaire à BraVa sont données à titre de comparaison.
+\caption{Longueur des {\em artères cérébrales antérieures}, {\em artères cérébrales moyennes} et {\em artères cérébrales postérieures} telles que mesurées dans le projet BraVa pour 61 sujets (données extraites de la base BraVa en ligne \textcolor{red}{\tt cng.gmu.edu/brava/}). Des mesures extraites d'une segmentation manuelle (voir~\ref{sec:segmentation} et figure~\ref{fig:2_comparaisons_segmentations}) sur un TOF de couverture anatomique similaire à BraVa sont données à titre de comparaison.}
 \label{tab:databrava}
 \begin{tabularx}{\linewidth}{|X| X X X X X|}
 \hline
