--- a/Main.tex
+++ b/Main.tex
@@ -42,12 +42,12 @@
 \encadrant{Alain \scshape{Bonafé},Stéphane \scshape{Chemouny}}
 \directeur{François \scshape{Molino}}
 \date{14 septembre 2015}
-\juryc{Mme Emmanuelle Le Bars}{IR, INM}{Jury}
+\juryf{Mme Emmanuelle Le Bars}{IR, INM}{Invitée}
 \juryd{M. Mokhtar Zagzoule}{Professeur IMFT}{Jury}
 \jurya{M. Alexandre Krainik}{PU-PH, CHU Grenoble}{Rapporteur}
 \juryb{M. Emmanuel Barbier}{DR Inserm, GIN}{Rapporteur}
 \jurye{M. Christophe Goze-Bac}{DR CNRS, L2C}{Représentant de l'ED}
-\juryf{Mme. Agnès Malgouyres }{Responsable AM, Siemens}{Invitée}
+\juryc{Mme. Agnès Malgouyres }{Responsable AM, Siemens}{Jury}
 \juryg{M. Patrice Mollard}{DR CNRS, IGF}{Invité}
 \juryh{M. Nicolas Menjot de Champfleur}{MCU-PH, INM}{Invité}
 \ecole{Université de Montpellier}
