--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -28,11 +28,9 @@ Que ce soit en imagerie par temps de vol ou en contraste de phase, les vaisseaux
 \label{fig:2_1_segmentation_arteres}	
 \end{figure}
 Un grand nombre d’outils de segmentation existent dédiés aux images IRM. Mais ils recherchent un but spécifique : l’extraction des différents types de tissus présents dans le cerveau, la matière grise, la matière blanche, et le liquide cérébro-spinal (voir Appendice~\ref{sec:pretrait}).  Les approches optimisées pour ce genre de segmentation ne peuvent pas être appliquées dans le cadre des vaisseaux. Pour ces derniers des approches dédiées ont été développées (\cite{Lesage2009}). Elles se décomposent toutes en deux étapes, chacune devant être optimisée : le prétraitement des images puis la segmentation elle-même.\\
-Les prétraitements consistent à simplifier les informations contenues dans les images d’angiographie IRM. Les traitements génériques disponibles entre lesquels il s’agît de faire un choix ont été développés dans d’autres contextes comme le sous-échantillonnage et la quantification (\cite{Tschirren2005}). Les outils les plus courants restent cependant les filtres améliorant la qualité de l’image. Citons les filtres gradients  (\cite{Koller1995}), les filtres morphologiques (\cite{Wilkinson2001}), ou les filtres à base de matrice Hessienne (\cite{Frangi1998}). Parmi ces techniques, seul le filtre Hessien prend réellement en compte la structure de type tube des vaisseaux en vue d’améliorer leur visibilité. Il représente ainsi le prétraitement privilégié (\textcolor{red}{ref : Jin et al., “Vascular Tree Segmentation in Medical Images Using Hessian-Based Multiscale Filtering and Level Set Method, Vascular Tree Segmentation in Medical Images Using Hessian-Based Multiscale Filtering and Level Set Method.”}). Le filtre utilisant cette méthode est dit filtre de Frangi  (\cite{Frangi1998},~\cite{Manniesing2006}). Ce filtre vise à extraire une quantité mesurant la vraisemblance pour une région d’appartenir à un vaisseau : on parle de  « vesselness » locale de l’image. L’idée est d’identifier dans l’image les structures en forme de tubes (voir Figure~\ref{fig:2_1_segmentation_arteres}). \\
+Les prétraitements consistent à simplifier les informations contenues dans les images d’angiographie IRM. Les traitements génériques disponibles entre lesquels il s’agît de faire un choix ont été développés dans d’autres contextes comme le sous-échantillonnage et la quantification (\cite{Tschirren2005}). Les outils les plus courants restent cependant les filtres améliorant la qualité de l’image. Citons les filtres gradients  (\cite{Koller1995}), les filtres morphologiques (\cite{Wilkinson2001}), ou les filtres à base de matrice Hessienne (\cite{Frangi1998}). Parmi ces techniques, seul le filtre Hessien prend réellement en compte la structure de type tube des vaisseaux en vue d’améliorer leur visibilité. Il représente ainsi le prétraitement privilégié (\textcolor{red}{ref : Jin et al., “Vascular Tree Segmentation in Medical Images Using Hessian-Based Multiscale Filtering and Level Set Method, Vascular Tree Segmentation in Medical Images Using Hessian-Based Multiscale Filtering and Level Set Method.”}). Le filtre utilisant cette méthode est dit filtre de Frangi  (\cite{Frangi1998},~\cite{Manniesing2006}). Ce filtre vise à extraire une quantité mesurant la vraisemblance pour une région d’appartenir à un vaisseau : on parle de  « vesselness » locale de l’image. L’idée est d’identifier dans l’image les structures en forme de tubes (voir Figure~\ref{fig:2_1_segmentation_arteres}). Mathématiquement, on calcule la matrice Hessienne de l’image à partir de ses dérivées secondes (aux différences finies) et on en extrait des valeurs propres. Ces valeurs propres $\lambda_1$, $\lambda_2$ et $\lambda_3$ (à 3D) caractérisent l’anisotropie des intensités de l’image. Les valeurs propres sont classées par ordre croissant du module ($|\lambda_1|\leqslant|\lambda_2|\leqslant|\lambda_3|$). Un voxel appartenant à un vaisseau doit se caractériser par un ellipsoïde Hessien local allongé : $\lambda_1$ faible (idéalement zéro) et $\lambda_2$ et $\lambda_3$ de grandes magnitudes de mêmes signes. Le tableau de la figure~\ref{fig:2_2_tableau_hessienne} résume les relations existantes entre les valeurs propres de la matrice Hessienne et les différentes structures que l’on cherche à détecter. Avec l’imagerie ToF et le contraste de phase, nous recherchons ainsi les structures claires tubulaires. Le résultat de cette étape est une image dont les intensités représentent pour chaque pixel la vraisemblance d’appartenance à un vaisseau (Figure ~\ref{fig:2_1_segmentation_arteres} C). L’image filtrée est de très bonne qualité (Figure~\ref{fig:2_3_filtre_frangi}). L’utilisation de cet outil moins sensible au bruit et offrant des contours plus lisses, facilite donc les étapes postérieures de traitement. \\
 
 A l’issue du prétraitement, les principaux algorithmes de segmentation utilisés dans des contextes vasculaires se regroupent en trois approches principales : la croissance de région, les contours actifs, et les lignes médianes (\cite{Lesage2009}). La croissance de région segmente de façon incrémentielle un objet en recrutant les voxels adjacents selon certains critères comme par exemple la variation locale de l’intensité. Elle requiert le plus souvent la définition d’un point initial, qui peut être obtenu via un simple seuillage sur l’image (\cite{Boskamp2004}). Les contours actifs font évoluer une interface sous l’action de différentes forces : des forces externes calculées à partir des intensités de l’image, et des forces internes de type tension de lignes exprimant des contraintes a-priori la géométrie du contour et sa régularité (\cite{McInerney1996}). Les lignes médianes se focalisent sur l’extraction directe du centre des vaisseaux en utilisant des informations de plus haut niveaux telles que la localisation du centre du vaisseau, l’estimation de sa direction et de sa taille caractéristique (\cite{Aylward2002}). \\
-
-Mathématiquement, on calcule la matrice Hessienne de l’image à partir de ses dérivées secondes (aux différences finies) et on en extrait des valeurs propres. Ces valeurs propres $\lambda_1$, $\lambda_2$ et $\lambda_3$ (à 3D) caractérisent l’anisotropie des intensités de l’image. Les valeurs propres sont classées par ordre croissant du module ($|\lambda_1|\leqslant|\lambda_2|\leqslant|\lambda_3|$). Un voxel appartenant à un vaisseau doit se caractériser par un ellipsoïde Hessien local allongé : $\lambda_1$ faible (idéalement zéro) et $\lambda_2$ et $\lambda_3$ de grandes magnitudes de mêmes signes. Le tableau de la figure~\ref{fig:2_2_tableau_hessienne} résume les relations existantes entre les valeurs propres de la matrice Hessienne et les différentes structures que l’on cherche à détecter. Avec l’imagerie ToF et le contraste de phase, nous recherchons ainsi les structures claires tubulaires. Le résultat de cette étape est une image dont les intensités représentent pour chaque pixel la vraisemblance d’appartenance à un vaisseau (Figure ~\ref{fig:2_1_segmentation_arteres} C). L’image filtrée est de très bonne qualité (Figure~\ref{fig:2_3_filtre_frangi}). L’utilisation de cet outil moins sensible au bruit et offrant des contours plus lisses, facilite donc les étapes postérieures de traitement. \\
 %%%
 \begin{figure}[!t]
 \centering
@@ -62,7 +60,6 @@ Au vue des résultats nous avons choisi la combinaison d’un prétraitement Hes
 \caption{Schéma possible en 3D selon la valeur de la valeur propre $\lambda_k$ (H=élevé, L=faible, N = bruité, +/- indique le signe de la valeur propre). Les valeurs propres sont ordonnées selon ($|\lambda_1|\leqslant |\lambda_2|\leqslant |\lambda_3|$ (\cite{Frangi1998}).}
 \label{fig:2_2_tableau_hessienne}	
 \end{figure}
-
 %%%
 \begin{figure}[!t]
 \centering
@@ -70,7 +67,6 @@ Au vue des résultats nous avons choisi la combinaison d’un prétraitement Hes
 \caption{Comparaison entre une projection des intensités maximales sur une image en temps de vol brute à gauche, et l'image filtrée par le filtre de Frangi à droite. L'image filtrée est moins bruitée et met en évidence les vaisseaux d'intérêt.}
 \label{fig:2_3_filtre_frangi}	
 \end{figure}	
-
 %%%
 \begin{figure}[!b]
 \centering
