--- a/jeremythesebib.bib
+++ b/jeremythesebib.bib
@@ -2849,3 +2849,16 @@ title = {{Brain ventricular volume and cerebrospinal fluid biomarkers of Alzheim
 volume = {20},
 year = {2010}
 }
+
+
+@article{Jin2013,
+abstract = {Vascular segmentation plays an important role in medical image analysis. A novel technique for the automatic extraction of vascular trees from 2D medical images is presented, which combines Hessian-based multiscale filtering and a modified level set method. In the proposed algorithm, the morphological top-hat transformation is firstly adopted to attenuate background. Then Hessian-based multiscale filtering is used to enhance vascular structures by combining Hessian matrix with Gaussian convolution to tune the filtering response to the specific scales. Because Gaussian convolution tends to blur vessel boundaries, which makes scale selection inaccurate, an improved level set method is finally proposed to extract vascular structures by introducing an external constrained term related to the standard deviation of Gaussian function into the traditional level set. Our approach was tested on synthetic images with vascular-like structures and 2D slices extracted from real 3D abdomen magnetic resonance angiography (MRA) images along the coronal plane. The segmentation rates for synthetic images are above 95\%. The results for MRA images demonstrate that the proposed method can extract most of the vascular structures successfully and accurately in visualization. Therefore, the proposed method is effective for the vascular tree extraction in medical images.},
+author = {Jin, Jiaoying and Yang, Linjun and Zhang, Xuming and Ding, Mingyue},
+doi = {10.1155/2013/502013},
+issn = {1748670X},
+journal = {Computational and Mathematical Methods in Medicine},
+pmid = {24348738},
+title = {{Vascular tree segmentation in medical images using Hessian-based multiscale filtering and level set method}},
+volume = {2013},
+year = {2013}
+}
